--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "rvc-dashboard",
   "version": "2.0.0",
+  "homepage": "https://tpikachu.github.io/RVC-Dashboard",
   "private": true,
   "dependencies": {
     "@chakra-ui/icons": "^1.0.14",
